<resources>
    <string name="app_name">LocMess</string>
    <string name="app_create_account_title"></string>

    <!-- Strings related to login -->
    <string name="noaccount">No account yet? Create one</string>
    <string name="account">Create Account</string>
    <string name="memberlogin">Already a member? Login</string>
    <string name="name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="button_undo">Undo</string>
    <string name="owner">Owner</string>
    <string name="title">Insert Title here</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut placerat nec augue nec faucibus. Vivamus et viverra est. Pellentesque ac mi tellus. Maecenas nunc sapien, laoreet eget enim quis, tincidunt auctor purus. In sed nunc id elit vulputate blandit. Proin tincidunt mollis nulla id viverra. Curabitur mollis auctor ante, ac bibendum nulla rhoncus vitae. Nulla ultrices venenatis finibus.</string>
    <string name="location_example">Arco do Cego Park</string>
    <string name="coordinates_example">[38.734383, -9.1403882, 20m]</string>

    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>

    <string name="new_keypair">New keypair</string>
    <string name="profile_key">Key</string>
    <string name="profile_value">Value</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="centralized">Centralized</string>
    <string name="decentralized">Decentralized</string>

    <string name="content_hint">Type content here.</string>

    <string name="create">Create</string>

    <string name="mode_server">Server</string>
    <string name="mode_wifi_direct">WiFi Direct</string>

    <string name="pick_location">Pick the message\'s location</string>

    <string name="add_key_value">Add Key/Value</string>
    <string name="add_message">Post New Message</string>
    <string name="add_location">Add New Location</string>

    <!-- Menu. -->
    <string name="menu">Menu</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="locations">Locations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- Location. -->
    <string name="Location">Locations</string>
    <string name="NLocation">New Location</string>
    <string name="locationName">Name</string>
    <string name="locationLatitude">Latitude</string>
    <string name="locationLongitude">Longitude</string>
    <string name="pickOnMap">pick on map</string>
    <string name="radius">Radius (100m by default)</string>
    <string name="addButton">Add</string>
    <string name="ssid">New SSID Location</string>
    <string name="gps">New GPS location</string>
    <string name="pick_location_on_map">Pick Location on Map</string>
    <string name="timestamp">Timestamp</string>

</resources>
