<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp">



    <LinearLayout
        android:layout_margin="15dp"
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical = "true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NLocation"
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locationName"
            android:inputType="textAutoComplete|textAutoCorrect" />

        <EditText
            android:id="@+id/input_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locationLatitude"
            android:inputType="textAutoComplete|textAutoCorrect" />

        <EditText
            android:id="@+id/input_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locationLongitude"
            android:inputType="textAutoComplete|textAutoCorrect" />

        <EditText
            android:id="@+id/input_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radius"
            android:inputType="number" />

        <Button
            android:id="@+id/pickOnMap"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/pickOnMap" />

    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent">

        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="bottom">

            <Button
                android:id="@+id/addButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/addButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>


    </FrameLayout>

</android.support.constraint.ConstraintLayout>

