<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="pt.ulisboa.tecnico.cmov.locmess.outbox.PolicyActivity">

    <ToggleButton
        android:id="@+id/btn_policy_mode"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/background_toggle_policy"
        android:checked="true"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@drawable/text_toggle_policy"
        android:textOff="@string/blacklist"
        android:textOn="@string/whitelist"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#e8eaf6" />

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/background_state_drawable"
        android:padding="16dp"
        android:text="@string/add_key_value"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>