<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cont_item_root"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/background_state_drawable"
    android:clickable="true"
    >

    <ImageView
        android:id="@+id/im_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingStart="@dimen/padding_list_row"
        android:src="@drawable/ic_location_on_black_36dp" />

    <LinearLayout
        android:id="@+id/message_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="72dp"
        android:paddingRight="@dimen/padding_list_row">

        <TextView
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/owner"
            android:textColor="@color/from"
            android:textSize="@dimen/msg_text_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_primary"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/subject"
            android:textSize="@dimen/msg_text_secondary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_secondary"
            android:text="@string/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/message"
            android:textSize="@dimen/msg_text_secondary" />

    </LinearLayout>

    <TextView
        android:id="@+id/timestamp"
        android:text="Timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/timestamp"
        android:textSize="@dimen/timestamp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_undo"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />

</RelativeLayout>