<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cont_item_root"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/background_state_drawable"
    android:clickable="true"
    >

    <ImageView
        android:id="@+id/im_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingStart="16dp"
        android:src="@drawable/ic_cloud_black_36dp" />

    <TextView
        android:id="@+id/lbl_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/im_item_icon"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="48dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lbl_item_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_item_title"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="48dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/timestamp"
        android:textSize="@dimen/timestamp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/undo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_undo"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />

</RelativeLayout>