<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.outbox.PostMessageActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/bt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/background_icon_enabled_button"
            android:src="@drawable/ic_location_on_white_48dp"/>

        <ImageButton
            android:id="@+id/bt_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/background_icon_enabled_button"
            android:src="@drawable/ic_filter_list_white_48dp"/>

        <ImageButton
            android:id="@+id/bt_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/background_icon_enabled_button"
            android:src="@drawable/ic_schedule_white_48dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tx_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/switch_delivery_mode"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1" />

        <Switch
            android:id="@+id/switch_delivery_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/mode_server"
            android:textSize="14sp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/tx_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:hint="@string/content_hint"
         />
    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/background_state_drawable"
        android:padding="16dp"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</LinearLayout>
