<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="6dp"
        android:paddingStart="6dp"
        android:paddingTop="12dp"
        >


        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/coordinates_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_label"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Latitude Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect">

                    <EditText
                        android:id="@+id/input_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/locationLatitude"
                        android:inputType="textAutoComplete|textAutoCorrect" />
                </android.support.design.widget.TextInputLayout>

                <!-- Longitude Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect">

                    <EditText
                        android:id="@+id/input_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/locationLatitude"
                        android:inputType="textAutoComplete|textAutoCorrect" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <ImageButton
                android:id="@+id/pickOnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:background="@drawable/background_icon_enabled_button"
                android:src="@drawable/ic_location_on_white_48dp"/>
        </LinearLayout>

        <!-- Radius Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/coordinates_layout">

            <EditText
                android:id="@+id/input_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/radius"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>




        <android.support.v7.widget.AppCompatButton
            android:id="@+id/addButton"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_icon_enabled_button"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:text="@string/addButton" />


    </RelativeLayout>
</LinearLayout>





